--- a/public/views/pages/contact.ejs
+++ b/public/views/pages/contact.ejs
@@ -34,7 +34,7 @@
                             <div class="info_item">
                                 <i class="lnr lnr-home"></i>
                                 <h6>深圳 Shenzhen, 中国 China</h6>
-                                <p>沃特斯科技园</p>
+                                <p>沃特思科技园</p>
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
