--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -9,6 +9,8 @@
                     you put into
                     improving your skills,</p>
                 <p> -->
+                    <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2022090480号-1</a><br>
+
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved by Openblock.cc Team
